<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khulud.gathering.fragmnets.ProfileFragment">

    <data>

        <variable
            name="viewModel"
            type="com.khulud.gathering.model.ProfileViewModel" />

        <variable
            name="profileFragment"
            type="com.khulud.gathering.fragmnets.ProfileFragment" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/uploadGalaryPic"
            android:layout_width="184dp"
            android:layout_height="171dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/purple_700"
            app:civ_border_width="?android:attr/buttonCornerRadius"
            app:imageUrl="@{viewModel.proImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@id/uploadGalaryPic"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadGalaryPic" />

        <TextView
            android:id="@+id/username_output"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:layout_below="@+id/textview1"
            android:layout_alignStart="@+id/textview1"
            android:layout_alignParentEnd="true"
            android:hint="@string/name_view"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview1" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@+id/username_output"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="194dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="194dp"
            android:gravity="center"
            android:text="@string/bio"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bio_output"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_output"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/bio_output"
            android:layout_width="291dp"
            android:layout_height="100dp"
            android:layout_below="@+id/textview2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="184dp"
            android:hint="@string/bio_view"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bio_output"
            android:layout_alignEnd="@+id/bio_output"
            android:layout_alignParentStart="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="12dp"
            android:background="#21083b"
            android:text="@string/update"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_output"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/purple_700"
            android:text="@string/setting"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/updateBtn"
            app:layout_constraintTop_toBottomOf="@+id/bio_output"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/settingBtn"
            app:layout_constraintStart_toStartOf="@+id/updateBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
