<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khulud.gathering.fragmnets.EditeProfileFragment">

    <data>

        <variable
            name="viewModel"
            type="com.khulud.gathering.model.ProfileViewModel" />

        <variable
            name="profileFragment"
            type="com.khulud.gathering.fragmnets.ProfileFragment" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="124dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/purple_700"
            app:civ_border_width="?android:attr/buttonCornerRadius"
            app:imageUrl="@{viewModel.proImage}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePic"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:hint="@string/bio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio_input"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/bio"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="111dp"
            android:background="@color/purple_700"
            android:text="@string/save_change"
            app:cornerRadius="30dp"
            tools:ignore="TouchTargetSizeCheck" />


    </RelativeLayout>

</layout>